--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "bin": {
     "ecstatic": "./lib/ecstatic.js",
-    "dump": "bin/dump.js"
+    "dumpheaders": "bin/dump.js"
   },
   "keywords": [
     "static",
